Improving proof of concept

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
-Package: vexflowR
-Title: What the Package Does (one line, title case)
+Package: abcR
+Title: Renders ABC notation using the abcjs package.
 Version: 0.0.0.9001
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Authors@R: person("Peter", "Harrison", email = "pmc.harrison@gmail.com", role = c("aut", "cre"))
+Description: Renders ABC notation using the abcjs package (https://abcjs.net).
 Depends: R (>= 3.5.1)
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
