--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,10 +3,15 @@ Title: Renders ABC notation using the abcjs package.
 Version: 0.0.0.9001
 Authors@R: person("Peter", "Harrison", email = "pmc.harrison@gmail.com", role = c("aut", "cre"))
 Description: Renders ABC notation using the abcjs package (https://abcjs.net).
-Depends: R (>= 3.5.1)
+Depends: R (>= 3.5.0)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports: checkmate,
     shiny,
-    htmltools
+    htmltools,
+    tibble,
+    rlang,
+    magrittr,
+    dplyr
+RoxygenNote: 6.1.0
