--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(abc_html_from_file)
 export(abc_html_from_pc_set)
 export(abc_html_from_string)
+export(abc_pdf_from_html)
 export(abc_view_file)
 export(abc_view_pc_set)
 export(abc_view_string)
