--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,13 +7,16 @@ Depends: R (>= 3.5.0)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Imports: checkmate,
-    shiny,
-    htmltools,
-    tibble,
-    rlang,
-    magrittr,
-    dplyr,
-    knitr,
-    webshot
+Imports: 
+    checkmate (>= 1.8.5),
+    shiny (>= 1.1.0),
+    htmltools (>= 0.3.6),
+    tibble (>= 1.4.2),
+    rlang (>= 0.2.1),
+    magrittr (>= 1.5),
+    dplyr (>= 0.7.6),
+    knitr (>= 1.20),
+    webshot (>= 0.5.0)
 RoxygenNote: 6.1.0
+URL: https://github.com/pmcharrison/abcR
+BugReports: https://github.com/pmcharrison/abcR/issues
