--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,3 +20,5 @@ Imports:
 RoxygenNote: 6.1.0
 URL: https://github.com/pmcharrison/abcR
 BugReports: https://github.com/pmcharrison/abcR/issues
+Suggests: 
+    testthat
