--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Imports:
     tibble (>= 1.4.2),
     rlang (>= 0.2.1),
     magrittr (>= 1.5),
-    dplyr (>= 0.7.6),
+    dplyr,
     knitr (>= 1.20),
     webshot (>= 0.5.0)
 RoxygenNote: 6.1.0
