--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,14 @@
 
 export(abc_html_from_file)
 export(abc_html_from_midi_chord)
+export(abc_html_from_midi_chord_seq)
 export(abc_html_from_pc_set)
 export(abc_html_from_string)
 export(abc_id_counter)
 export(abc_pdf_from_html)
 export(abc_view_file)
 export(abc_view_midi_chord)
+export(abc_view_midi_chord_seq)
 export(abc_view_pc_set)
 export(abc_view_string)
 export(new_abc_id)
