--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,17 +3,17 @@
 export(abc_id_counter)
 export(html_from_abc_file)
 export(html_from_abc_string)
-export(html_from_midi_chord)
-export(html_from_midi_chord_seq)
 export(html_from_pc_set)
+export(html_from_pi_chord)
+export(html_from_pi_chord_seq)
 export(new_abc_id)
 export(pdf_from_abc_html)
-export(spell_midi_chord)
 export(spell_pcs)
+export(spell_pi_chord)
 export(view_abc_file)
 export(view_abc_string)
-export(view_midi_chord)
-export(view_midi_chord_seq)
 export(view_pc_set)
+export(view_pi_chord)
+export(view_pi_chord_seq)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
